--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -95,6 +95,15 @@
  \end{itemize}
 \end{itemize}
 
+%- - - - - - - -
+\subsection{GUI}
+
+\begin{itemize}
+ \item Funktionen beschreiben + wie verknüpft mit Programm
+ \item JavaView zum anzeigen für groben Überblick (Lizenz checken)
+\end{itemize}
+
+
 %-----------------------------
 \section{Technische Umsetzung}
 
