--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -76,6 +76,7 @@
 \newcommand{\zb}{z.\,B.\ }
 \newcommand{\dash}{d.\,h.\ }
 \newcommand{\bzw}{bzw.\ }
+\newcommand{\etc}{etc.\ }
 
 %% --------------------------------
 %% | Settings for word separation |
@@ -137,12 +138,16 @@
 %% -----------------
 \mainmatter
 \pagenumbering{arabic}
+\include{introduction_and_idea}
 \include{previous_work}
-\include{idea}
+\include{biology}
+\include{first_approaches_and_problems}
 \include{pca}
-\include{generation_algorithm}
+\include{generation_of_non_pca_things}
+\include{bone_models}
+\include{additional_features}
 \include{implementation_detail}
-
+\include{future_work}
 
 
 %% --------------------
