--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -1,4 +1,12 @@
+%---------------------------
+%---------------------------
 \chapter{Bisherige Arbeiten}
+
+\begin{itemize}
+ \item Aufbau des Skeletts mit Aufbau von Skeletten, die für Animation verwendet werden, vergleichen (realistischer, ...)
+\end{itemize}
+
+
 
 %-------------
 \section{Ziva}
@@ -64,34 +72,4 @@
  \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/OurCentaursAreDifferent?from=Main.CentauroidForm}
  \item Pegasus hat den Körper eines Pferdes + Flügel, die zusätzlich zu den Vorderbeinen an Schultergürtel ansetzen\\
  \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus}
-\end{itemize}
-
-
-
-
-
-%-----------------
-%-----------------
-\chapter{Biologie}
-
-\begin{itemize}
- \item "`Wirbeltiere (Vertebrata) [\dots] Von vielen Zoologen wird heute der Begriff Schädeltiere (Craniota) für dieses Taxon bevorzugt. Diese Auffassung berücksichtigt, dass die Rundmäuler, wie auch einige andere Wirbeltiere, als Achsenskelett keine Wirbelsäule, sondern eine Chorda dorsalis haben. Doch allen Wirbeltieren gemein ist ein verknöcherter oder knorpeliger Schädel; sein Vorhandensein gehört somit zu den gemeinsam abgeleiteten Merkmalen (Synapomorphien) dieser Chordaten-Gruppe."' (\url{https://de.wikipedia.org/wiki/Wirbeltiere}) $\rightarrow$ Beschränkung auf Schädeltiere mit Wirbelsäule
- \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
- \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
- 
- \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
-    \begin{itemize}
-     \item Halswirbel: 7 oder, falls Flügel 10 bis 30
-     \item Brustwirbel: 15
-     \item Lenden- + Kreuzwirbel: 10
-     \item Schwanzwirbel: 5 bis 20
-    \end{itemize}
- Auf der Rückenwirbelsäule liegen also insgesamt 25 Wirbel.   
- Da der "`Wurzelwirbel"' in der Mitte der Rückenwirbelsäule liegt (oder zumindest ungefähr, da Bezierkurve ausgewertet bei 0,5) werden 13 vorne und 12 hinten generiert.
-
- 
- \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
- 
- \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
- \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
 \end{itemize}
