--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -4,6 +4,7 @@
 \label{chapter_implementation_detail}
 
 \begin{itemize}
+ \item Dateiformate + Programmiersprache
  \item ein Wort zur Softwarearchitektur?
  \item Erweiterbarkeit der Software?
 \end{itemize}
