--- a/latex/introduction_and_idea.tex
+++ b/latex/introduction_and_idea.tex
@@ -28,5 +28,15 @@
  \item Erzeugung von vielen Skelettvarianten bei Eingabe eines Skeletts (nur wenn es relativ leicht möglich ist)
 \end{enumerate}
 
+%-----------------------
+\section{Interaktivität}
+
+\begin{itemize}
+ \item Eine Anwendung, bei der nach Eingabe von Parametern sofort das komplette Tier generiert wird, ist weniger hilfreich als eine, bei der schrittweise Teile davon generiert werden können (und auch rückgängig gemacht werden können)
+ \item Teile, die einem nicht gefallen, sollten geändert werden können
+ \item Änderungen können Auswirkungen auf den Rest des Körpers haben (durch Regeln) bzw. manche Änderungen sind nicht möglich
+ \item Könnte verwendet werden um schnell verschiedene Möglichkeiten zu testen
+\end{itemize}
+
 
 
